--- a/index.html
+++ b/index.html
@@ -6,5 +6,32 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <div id="header-top">
+                <div class="container">
+                    <div id="header-top-left"></div>
+                    <div id="header-top-right"></div>
+                </div>
+            </div>
+            <div id="header-bottom">
+                <div class="container">
+                    <div id="header-bottom-left"></div>
+                    <div id="header-bottom-right"></div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section id="features">
+                <div class="container">
+
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="container">
+
+            </div>
+
+        </footer>
     </body>
 </html>
