struttura pagine generale e solo la prima completa

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <section id="prima-pagina">
         <header>
             <div id="header-top">
                 <div class="container">
@@ -21,17 +22,23 @@
             </div>
         </header>
         <main>
-            <section id="features">
+            <section id="sotto-header">
                 <div class="container">
-
+                    <div id="img-no">
+                        <h1></h1>
+                        <p></p>
+                        <button type="button" name="button">ciao</button>
+                        <p></p>
+                    </div>
                 </div>
-            </section>
+                <hr>
+            </section></section>
+            <section id="seconda-pagina"></section>
+            <section id="terza-pagina"></section>
+            <section id="quarta-pagina"></section>
         </main>
-        <footer>
-            <div class="container">
-
-            </div>
-
+        <footer id="quinta-pagina">
+            <div class="container"></div>
         </footer>
     </body>
 </html>
