work in progress fino a quasi tutta la seconda pagina

--- a/index.html
+++ b/index.html
@@ -21,22 +21,42 @@
                 </div>
             </div>
         </header>
-        <main>
             <section id="sotto-header">
                 <div class="container">
                     <div id="img-no">
                         <h1></h1>
                         <p></p>
-                        <button type="button" name="button">ciao</button>
+                        <div class="button">ciao</div>
                         <p></p>
                     </div>
                 </div>
                 <hr>
-            </section></section>
-            <section id="seconda-pagina"></section>
+            </section>
+        </section>  <!-- chiusura prima pagina  -->
+            <section id="seconda-pagina">
+                <div class="container">
+                    <div id="test-sx-top">
+                        <h1></h1>
+                        <p></p>
+                    </div>
+                        <div id="test-dx-top">
+                            <h3>Free HubSpot CRM</h3>
+                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                            <ul>
+                                <li>Contact  Insights</li>
+                                <li>Deals</li>
+                                <li>Tasks</li>
+                            </ul>
+                            <div class="button" >Get free CRM
+                        </div></div>
+                        <div class="test-sx-bottom">
+                        <h3>Marketing Hub</h3>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                    </div>  <!-- chiusura test-dx-top  -->
+                </div>  <!-- chiusura seconda pagina -->
+            </section>
             <section id="terza-pagina"></section>
             <section id="quarta-pagina"></section>
-        </main>
         <footer id="quinta-pagina">
             <div class="container"></div>
         </footer>
