primo passo per fare header

--- a/index.html
+++ b/index.html
@@ -10,21 +10,30 @@
         <header>
             <div id="header-top">
                 <div class="container">
-                    <div id="header-top-left"></div>
+                    <div id="header-top-left">
+                        <a href="#">English</a>
+                        <span>
+                            <a href="#">Contact Sales</a>
+                        </span>
+                    </div>
                     <div id="header-top-right"></div>
                 </div>
             </div>
             <div id="header-bottom">
                 <div class="container">
-                    <div id="header-bottom-left"></div>
-                    <div id="header-bottom-right"></div>
+                    <div id="header-bottom-left">
+
+                    </div>
+                    <div id="header-bottom-right">
+
+                    </div>
                 </div>
             </div>
         </header>
             <section id="sotto-header">
                 <div class="container">
                     <div id="img-no">
-                        <h1></h1>
+                        <h1>bella</h1>
                         <p></p>
                         <div class="button">ciao</div>
                         <p></p>
