finito header top

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
                             <a href="#">Contact Sales</a>
                         </span>
                     </div>
-                    <div id="header-top-right"></div>
+                    <div id="header-top-right">
+                        <div class="linea">
+                            <img src="images/lente.jpg" alt="lente di ingreandimento">
+                        </div>
+                        <div class="linea">
+                            <a href="#">Log in</a>
+                        </div>
+                        <div class="linea">
+                            <a href="#">Get HubSpot free</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="header-bottom">
