solo prima pagina

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <hr>
             </section>
         </section>  <!-- chiusura prima pagina  -->
-            <section id="seconda-pagina">
+            <!-- <section id="seconda-pagina">
                 <div class="container">
                     <div id="test-sx-top">
                         <h1></h1>
@@ -74,10 +74,10 @@
                     </div>  <!-- chiusura test-dx-top  -->
                 </div>  <!-- chiusura seconda pagina -->
             </section>
-            <section id="terza-pagina"></section>
-            <section id="quarta-pagina"></section>
-        <footer id="quinta-pagina">
-            <div class="container"></div>
-        </footer>
+            <!-- <section id="terza-pagina"></section> -->
+            <!-- <section id="quarta-pagina"></section> --> -->
+        <!-- <footer id="quinta-pagina"> -->
+            <!-- <div class="container"></div> -->
+        <!-- </footer> -->
     </body>
 </html>
