header top forse finito

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <section id="prima-pagina">
+            <hr>
         <header>
             <div id="header-top">
                 <div class="container">
@@ -20,14 +21,15 @@
                         <div class="linea">
                             <img src="images/lente.jpg" alt="lente di ingreandimento">
                         </div>
-                        <div class="linea">
-                            <a href="#">Log in</a>
+                        <div class="linea" id="uno-top-right">
+                            <a href="#"id="secblocku">Log in</a>
                         </div>
-                        <div class="linea">
-                            <a href="#">Get HubSpot free</a>
+                        <div class="linea" id="due-top-right">
+                            <a href="#" id="secblockd">Get HubSpot free</a>
                         </div>
                     </div>
                 </div>
+            <hr>
             </div>
             <div id="header-bottom">
                 <div class="container">
