--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
             <div id="header-bottom">
                 <div class="container">
                     <div id="header-bottom-left">
+                        <img src="images/logohub.svg" alt="logohub">
 
                     </div>
                     <div id="header-bottom-right">
+
+                        <a href="#"><span>Software</span></a>
+                        <a href="#"><span>Pricing</span></a>
+                        <a href="#"><span>Resources</span></a>
+                        <a href="#"><span>Partners</span></a>
+                        <a href="#"><span>About</span></a>
 
                     </div>
                 </div>
