header bottom forse finito

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         <header>
             <div id="header-top">
                 <div class="container">
-                    <div id="header-top-left">
+                    <div id="header-top-left" class="linea">
                         <a href="#">English</a>
                         <span>
                             <a href="#">Contact Sales</a>
                         </span>
                     </div>
-                    <div id="header-top-right">
-                        <div class="linea">
+                    <div id="header-top-right" >
+                        <div class="linea" >
                             <img src="images/lente.jpg" alt="lente di ingreandimento">
                         </div>
-                        <div class="linea" id="uno-top-right">
+                        <div id="uno-top-right" class="linea" >
                             <a href="#"id="secblocku">Log in</a>
                         </div>
-                        <div class="linea" id="due-top-right">
+                        <div id="due-top-right" class="linea" >
                             <a href="#" id="secblockd">Get HubSpot free</a>
                         </div>
                     </div>
