prima pagina finita

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div id="header-top">
                 <div class="container">
-                    <div id="header-top-left" class="linea">
+                    <div id="header-top-left">
                         <a href="#">English</a>
                         <span>
                             <a href="#">Contact Sales</a>
@@ -25,7 +25,7 @@
                             <a href="#"id="secblocku">Log in</a>
                         </div>
                         <div id="due-top-right" class="linea" >
-                            <a href="#" id="secblockd">Get HubSpot free</a>
+                            <a href="#" class="button">Get HubSpot free</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,6 @@
                 <div class="container">
                     <div id="header-bottom-left">
                         <img src="images/logohub.svg" alt="logohub">
-
                     </div>
                     <div id="header-bottom-right">
 
@@ -52,11 +51,14 @@
             <section id="sotto-header">
                 <div class="container">
                     <div id="img-no">
-                        <h1>bella</h1>
-                        <p></p>
-                        <div class="button">ciao</div>
-                        <p></p>
-                    </div>
+                        <h1>There’s a better way to grow.</h1>
+                        <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+                        <div class="allineamento">
+                        <div class="linea" class="button">
+                            <a href="#" class="button">Get HubSpot free</a>
+                        </div>
+                        <p>Get started with FREE tools, and upgrade as you grow.</p>
+                    </div></div>
                 </div>
                 <hr>
             </section>
