correzione e fine prima pagina inizio seconda

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <section id="prima-pagina">
             <hr>
-        <header>
+            <header>
             <div id="header-top">
-                <div class="container">
+                    <div class="container">
                     <div id="header-top-left">
                         <a href="#">English</a>
                         <span>
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </header>
-            <section id="sotto-header">
+            <div id="sotto-header">
                 <div class="container">
                     <div id="img-no">
                         <h1>There’s a better way to grow.</h1>
@@ -61,13 +61,13 @@
                     </div></div>
                 </div>
                 <hr>
-            </section>
+            </div>
         </section>  <!-- chiusura prima pagina  -->
-            <!-- <section id="seconda-pagina">
+        <section id="seconda-pagina">
                 <div class="container">
                     <div id="test-sx-top">
-                        <h1></h1>
-                        <p></p>
+                        <h1>Powerful alone. Better together.</h1>
+                        <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                     </div>
                         <div id="test-dx-top">
                             <h3>Free HubSpot CRM</h3>
