--- a/index.html
+++ b/index.html
@@ -69,24 +69,29 @@
                         <h1>Powerful alone. Better together.</h1>
                         <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                     </div>
-                        <div id="test-dx-top">
-                            <h3>Free HubSpot CRM</h3>
-                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
-                            <ul>
-                                <li>Contact  Insights</li>
-                                <li>Deals</li>
-                                <li>Tasks</li>
-                            </ul>
-                            <div class="button" >Get free CRM
-                        </div></div>
-                        <div class="test-sx-bottom">
+                    <div id="test-sx-bottom" class="clearfix" class="effetto">
                         <h3>Marketing Hub</h3>
-                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+                    </div>
+                    <div class="effetto">
+                    <div id="test-dx-top">
+                        <h3>Free HubSpot CRM</h3>
+                        <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                        <ul>
+                            <li>Contact  Insights</li>
+                            <li>Deals</li>
+                            <li>Tasks</li>
+                        </ul>
+                        <div class="button" >Get free CRM
+                    </div>
+                    </div>
+                </div>
+
                     </div>  <!-- chiusura test-dx-top  -->
                 </div>  <!-- chiusura seconda pagina -->
             </section>
             <!-- <section id="terza-pagina"></section> -->
-            <!-- <section id="quarta-pagina"></section> --> -->
+            <!-- <section id="quarta-pagina"></section> -->
         <!-- <footer id="quinta-pagina"> -->
             <!-- <div class="container"></div> -->
         <!-- </footer> -->
