seconda pagina working in progress

--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
                         <h1>Powerful alone. Better together.</h1>
                         <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                     </div><!-- chiusura test-sx-top  -->
-                    <div id="text-dx-top-effetto">
-
-                    <div id="test-dx-top" class="effetto" >
+                    <div id="text-dx-top-effetto" class="effetto">
+                    <div id="test-dx-top">
                         <h3>Free HubSpot CRM</h3>
                         <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
                         <h4>POPULAR FEATURES</h4>
@@ -84,12 +83,23 @@
 
                             <div class="button" >Get free CRM
                             </div>
-                            </div>
-
                     </div><!-- chiusura test-dx-top  -->
-                    <div id="test-sx-bottom" class="clearfix  effetto">
+                    </div>
+                    <div class="linea clearfix">
+                    <div id="test-sx-bottom" class="effetto">
                         <h3>Marketing Hub</h3>
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+                    </div>
+
+                    <div id="test-cx-bottom" class="effetto">
+                        <h3>Sales Hub</h3>
+                        <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
+                    </div>
+
+                    <div id="test-dx-bottom" class="effetto">
+                        <h3>Service Hub</h3>
+                        <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.
+                    </div>
                     </div>
 
                 </div><!-- container seconda-pagina  -->
