--- a/index.html
+++ b/index.html
@@ -85,27 +85,61 @@
                             </div>
                     </div><!-- chiusura test-dx-top  -->
                     </div>
-                    <div class="linea clearfix">
+                <div class="linea clearfix" id="seconda-pagina-parte-inferiore">
                     <div id="test-sx-bottom" class="effetto">
                         <h3>Marketing Hub</h3>
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+                        <h4>POPULAR FEATURES</h4>
+                        <ul>
+                            <li>Lead Generation</li>
+                            <li>Marketing Automation</li>
+                            <li>Analytics</li>
+                        </ul>
+                        <div class="button" >Get started
+                        </div>
                     </div>
 
                     <div id="test-cx-bottom" class="effetto">
                         <h3>Sales Hub</h3>
                         <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
+                        <h4>POPULAR FEATURES</h4>
+                        <ul>
+                            <li>Email Tracking</li>
+                            <li>Meeting Scheduling</li>
+                            <li>Email Automation</li>
+                        </ul>
+                        <div class="button" >Get started
+                        </div>
                     </div>
 
                     <div id="test-dx-bottom" class="effetto">
                         <h3>Service Hub</h3>
                         <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.
+                        <h4>POPULAR FEATURES</h4>
+                        <ul>
+                            <li>Tickets</li>
+                            <li>Customer Feedback</li>
+                            <li>Knowledge Base</li>
+                        </ul>
+                        <div class="button" >Get started
+                        </div>
                     </div>
-                    </div>
-
-                </div><!-- container seconda-pagina  -->
+                </div>   <!-- chiusura seconda-pagina-parte-inferiore -->
+                </div>   <!-- container seconda-pagina  -->
 
             </section><!-- chiusura seconda-pagina -->
-            <!-- <section id="terza-pagina"></section> -->
+            <section id="terza-pagina">
+                <div class="container">
+                <div id="text-top-center-terza-pagina" class="gold">
+                    <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                    <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                </div>
+                <div id="parte-tabella">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                </div>
+
+            </section>
             <!-- <section id="quarta-pagina"></section> -->
         <!-- <footer id="quinta-pagina"> -->
             <!-- <div class="container"></div> -->
