--- a/index.html
+++ b/index.html
@@ -134,13 +134,50 @@
                     <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                     <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
-                <div id="parte-tabella">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <div id="tabella">
+
+                <div id="parte-tabella-primariga" class="clearfix">
+                    <div class="bloccouno bordertab flosx">
+y
+                    </div>
+                    <div class="bloccodue bordertab flosx lineatab">
+y
+
+                    </div>
+                    <div class="bloccotre bordertab flosx lineatab">
+y
+
+                    </div>
+                    <div class="bloccoquattro bordertab flosx lineatab noborderright">
+y
+
+                    </div>
                 </div>
+                <div id="parte-tabella-secondariga"class="lineatab clearfix">
+
+                    <div class="bloccocinque bordertab flosx lineatab noborderbottom">
+y
+
+                    </div>
+                    <div class="bloccosei bordertab flosx lineatab noborderbottom">
+y
+
+                    </div>
+                    <div class="bloccosette bordertab flosx lineatab noborderbottom">
+y
+
+                    </div>
+                    <div class="bloccootto bordertab flosx lineatab noborderbottom noborderright">
+                y
+
+                    </div>
+                </div>
+
+            </div>
                 </div>
 
             </section>
-            <!-- <section id="quarta-pagina"></section> -->
+            <section id="quarta-pagina"></section>
         <!-- <footer id="quinta-pagina"> -->
             <!-- <div class="container"></div> -->
         <!-- </footer> -->
