fine 3pagina ma tabella da sistemare

--- a/index.html
+++ b/index.html
@@ -130,53 +130,61 @@
             </section><!-- chiusura seconda-pagina -->
             <section id="terza-pagina">
                 <div class="container">
-                <div id="text-top-center-terza-pagina" class="gold">
+                <div id="text-top-center-terza-pagina" class="headerterzapagina">
                     <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                     <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
                 <div id="tabella">
 
                 <div id="parte-tabella-primariga" class="clearfix">
-                    <div class="bloccouno bordertab flosx">
-y
+                    <div class="blc bloccouno bordertab flosx">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="bloccodue bordertab flosx lineatab">
-y
+                    <div class="blc bloccodue bordertab flosx lineatab">
+                        <h2>7M+</h2>
+                        <p>monthly visits</p>
 
                     </div>
-                    <div class="bloccotre bordertab flosx lineatab">
-y
+                    <div class="blc bloccotre bordertab flosx lineatab">
+                        <h2>218K+</h2>
+                        <p>certified professionals</p>
 
                     </div>
-                    <div class="bloccoquattro bordertab flosx lineatab noborderright">
-y
+                    <div class="blc bloccoquattro bordertab flosx lineatab noborderright">
+                        <h2>26K+</h2>
+                        <p>registered attendees</p>
 
                     </div>
                 </div>
                 <div id="parte-tabella-secondariga"class="lineatab clearfix">
 
-                    <div class="bloccocinque bordertab flosx lineatab noborderbottom">
-y
+                    <div class="blc bloccocinque bordertab flosx lineatab noborderbottom">
+                        <h2>400+</h2>
+                        <p>integrations</p>
 
                     </div>
-                    <div class="bloccosei bordertab flosx lineatab noborderbottom">
-y
+                    <div class="blc bloccosei bordertab flosx lineatab noborderbottom">
+                        <h2>6</h2>
+                        <p>languages</p>
 
                     </div>
-                    <div class="bloccosette bordertab flosx lineatab noborderbottom">
-y
+                    <div class="blc bloccosette bordertab flosx lineatab noborderbottom">
+                        <h2>2.6M+</h2>
+                        <p>social followers</p>
 
                     </div>
-                    <div class="bloccootto bordertab flosx lineatab noborderbottom noborderright">
-                y
-
+                    <div class="blc bloccootto bordertab flosx lineatab noborderbottom noborderright">
+                        <h2>5K+</h2>
+                        <p>profiles and counting</p>
                     </div>
                 </div>
 
             </div>
                 </div>
 
-            </section>
+            </section>  <!-- chiusura terzapagina -->
+
             <section id="quarta-pagina"></section>
         <!-- <footer id="quinta-pagina"> -->
             <!-- <div class="container"></div> -->
